--- a/app/src/main/res/layout-sw480dp/fragment_my_profile.xml
+++ b/app/src/main/res/layout-sw480dp/fragment_my_profile.xml
@@ -333,10 +333,9 @@
             android:layout_width="match_parent"
             android:layout_height="wrap_content"/>
 
-        <ScrollView
+        <androidx.core.widget.NestedScrollView
             android:background="@color/colorBackground"
             android:id="@+id/scrollable"
-            android:nestedScrollingEnabled="true"
             android:layout_width="match_parent"
             android:layout_height="match_parent"
             android:fillViewport="false"
@@ -349,7 +348,7 @@
                 android:layout_width="match_parent"
                 android:layout_height="wrap_content" />
 
-        </ScrollView>
+        </androidx.core.widget.NestedScrollView>
 
     </androidx.coordinatorlayout.widget.CoordinatorLayout>
 
