--- a/app/src/main/res/layout/fragment_settings.xml
+++ b/app/src/main/res/layout/fragment_settings.xml
@@ -536,6 +536,25 @@
                 android:layout_height="wrap_content"/>
 
             <TextView
+                android:id="@+id/card_line_11"
+                app:layout_constraintTop_toBottomOf="@id/profile_settings_send_comments"
+                style="@style/AppTheme.Divider.Toolbar"
+                tools:ignore="MissingConstraints" />
+
+            <TextView
+                android:fontFamily="sans-serif-light"
+                android:id="@+id/profile_settings_delete_account"
+                android:background="@color/colorElevated"
+                android:padding="16dp"
+                android:textColor="@color/colorText"
+                android:text="@string/delete_account"
+                app:layout_constraintStart_toStartOf="parent"
+                app:layout_constraintEnd_toEndOf="parent"
+                app:layout_constraintTop_toBottomOf="@id/card_line_11"
+                android:layout_width="match_parent"
+                android:layout_height="wrap_content"/>
+
+            <TextView
                 android:fontFamily="sans-serif-light"
                 android:id="@+id/profile_settings_disconnect"
                 android:layout_width="match_parent"
@@ -550,7 +569,7 @@
                 app:layout_constraintBottom_toBottomOf="parent"
                 app:layout_constraintEnd_toEndOf="parent"
                 app:layout_constraintStart_toStartOf="parent"
-                app:layout_constraintTop_toBottomOf="@id/profile_settings_send_comments" />
+                app:layout_constraintTop_toBottomOf="@id/profile_settings_delete_account" />
 
 
         </androidx.constraintlayout.widget.ConstraintLayout>
