--- a/app/src/main/res/layout/fragment_signup_new.xml
+++ b/app/src/main/res/layout/fragment_signup_new.xml
@@ -87,4 +87,13 @@
         fancy:fb_textColor="@color/colorText"
         fancy:fb_textSize="12sp" />
 
+    <dev.pinkroom.walletconnectkit.WalletConnectButton
+        app:layout_constraintTop_toBottomOf="@id/guest_btn_new"
+        app:layout_constraintStart_toStartOf="parent"
+        android:id="@+id/walletconnectbtn"
+        app:layout_constraintEnd_toEndOf="parent"
+        app:layout_constraintBottom_toBottomOf="parent"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"/>
+
 </androidx.constraintlayout.widget.ConstraintLayout>
